# code-hangar

./: .gitattributes  .gitignore  AGENTS.md  BUILD_WEEK_SUBMISSION.md  CONTRIBUTING.md  Cargo.toml  CodeHangar_Master_Spec_v20_Final.md  FIRST_AGENT_PROMPT.md  IMPLEMENTATION_PLAN.md  KNOWN_ISSUES.md  LICENSE  NOTICE  PHASE_0_1_TICKETS.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SECURITY_INVARIANTS.md  SOURCES.md  THIRD_PARTY_NOTICES.md  deny.toml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/desktop/: eslint.config.js  index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  BeginnerHelp.tsx  ContextMenu.tsx  ErrorBoundary.tsx  WorkspaceShell.tsx  addProjectsDialog.ts  ai-tool-files.ts  aiTasks.ts  api.ts  app-meta.ts  commandPalette.ts  comments.ts  connectorApi.ts  dialogFocus.ts  documentSearch.ts  fixtures.ts  graphMapExpansion.ts  interactionFeedback.ts  main.tsx  markdown.ts  projectAutoOpen.ts  projectInspector.ts  projectVisibility.ts  removeProjectDialog.ts  scanProgress.ts  session-transcript.ts  sessionSidebar.ts  settingsActions.ts  startupSideData.ts  styles.css  types.ts  ui.tsx  useProjectWorkspace.ts  visualAcceptance.ts  workspaceRoute.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.connector.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/__tests__/: add-projects-dialog.test.ts  ai-learning-tools.test.ts  ai-markdown.test.tsx  ai-review-lens.test.ts  ai-tasks-stream.test.ts  ai-tool-files.test.ts  ai-usage-meter.test.ts  app-meta.test.ts  base-ai-cleanliness.test.ts  beginner-usability.test.ts  command-palette.test.ts  comments.test.ts  context-menu.test.ts  controlled-checks.test.ts  dialog-focus-contract.test.ts  discover-view.test.ts  file-tree.test.ts  fixtures.test.ts  guided-tour.test.ts  interaction-feedback.test.ts  local-ai-ux.test.ts  markdown.test.ts  navigation-flyout-contract.test.ts  oled-surface-contract.test.ts  operation-plan.test.ts  organize-view.test.ts  overview-view.test.ts  phase8-polish.test.ts  project-center-view.test.ts  project-workspace.test.ts  recap-view.test.ts  recovery-view.test.ts  remove-project-dialog.test.ts  responsive-layout.test.ts  review-impact-view.test.ts  safe-light-editing.test.ts  scan-progress.test.ts  session-sidebar.test.ts  session-transcript.test.ts  settings-actions.test.ts  (+7 more)
apps/mcp-server/: Cargo.toml
apps/mcp-server/examples/: acceptance_fixture.rs
apps/mcp-server/src/: main.rs
apps/mcp-server/tests/: stdio_roundtrip.rs
crates/hangar-accounting/: Cargo.toml
crates/hangar-accounting/src/: lib.rs
crates/hangar-agent/: Cargo.toml
crates/hangar-agent/src/: lib.rs
crates/hangar-ai/: Cargo.toml
crates/hangar-ai/src/: lib.rs
crates/hangar-api/: Cargo.toml
crates/hangar-api/examples/: acceptance_catalog.rs
crates/hangar-api/src/: ai_assist.rs  app_removal.rs  controlled_checks.rs  dup_jobs.rs  edit_review.rs  edit_snapshot.rs  lib.rs  performance.rs  plan_jobs.rs  project_review.rs  project_summary.rs  session_changes.rs  value_edit.rs
crates/hangar-appconfig/: Cargo.toml
crates/hangar-appconfig/src/: lib.rs
crates/hangar-core/: Cargo.toml
crates/hangar-core/src/: lib.rs
crates/hangar-db/: Cargo.toml
crates/hangar-db/src/: lib.rs
crates/hangar-discovery/: Cargo.toml
crates/hangar-discovery/src/: lib.rs
crates/hangar-fs/: Cargo.toml
crates/hangar-fs/src/: lib.rs
crates/hangar-fs/tests/: adversarial_inventory.rs
crates/hangar-graph/: Cargo.toml
crates/hangar-graph/src/: lib.rs
crates/hangar-jobs/: Cargo.toml
crates/hangar-jobs/src/: lib.rs
crates/hangar-mcp/: Cargo.toml
crates/hangar-mcp/src/: lib.rs
crates/hangar-mutation/: Cargo.toml
crates/hangar-mutation/src/: backup.rs  confirm.rs  fsops.rs  journal.rs  lib.rs  lock.rs  longpath.rs  purge.rs  quarantine.rs  recover.rs  restore.rs  state_machine.rs
crates/hangar-mutation/tests/: adversarial_battery.rs
crates/hangar-nav/: Cargo.toml
crates/hangar-nav/src/: lib.rs
crates/hangar-plan/: Cargo.toml
crates/hangar-plan/src/: lib.rs
crates/hangar-preview/: Cargo.toml
crates/hangar-preview/src/: lib.rs
crates/hangar-protect/: Cargo.toml
crates/hangar-protect/src/: lib.rs
crates/hangar-security/: Cargo.toml
crates/hangar-security/src/: lib.rs
crates/hangar-test-fixtures/: Cargo.toml
crates/hangar-test-fixtures/src/: lib.rs
docs/: PACKAGING.md  PUBLICATION_CHECKLIST.md  RELEASE_NOTES.md  ai_assist_capability_plan.md  architecture.md  connect-your-ai-app.md  connect-your-local-model.md  engineering_details_by_phase.md  fixtures.md  phase_3_5_project_discovery.md  phase_5_local_automation.md  phase_6_graph_models_workflows.md  roadmap_finishers.md  total_control_extension.md  ui_principles.md  v1_fatal_readiness.md
docs/gates/: gate3_mutation_hardening.md
docs/qa/: beginner-usability-audit.md  v0.1.1-acceptance.md
docs/submission/: BUILD_PERIOD_DELTA.md  DEMO_SCRIPT.md  DEVPOST_DRAFT.md  DUAL_PATH_PLAN.md  EVIDENCE_MANIFEST.md  JUDGE_QUICKSTART.md  OWNER_HANDOFF.md  RELEASE_NOTES.md  SUBMISSION_CHECKLIST.md  TECHNICAL_PROOF.md
docs/submission/assets/: README.md
fixtures/: manifest.json
fixtures/git-like-project/: AGENTS.md  README.md
fixtures/git-like-project/src/: main.rs
fixtures/markdown-project/: AGENTS.md  README.md  package.json
fixtures/markdown-project/docs/: overview.md
fixtures/markdown-project/prompts/: system.md
fixtures/markdown-project/src/: main.ts
fixtures/sensitive-project/: .env  README.md  credentials.json  token.json
scripts/: acceptance-v011.ps1  build-connected-app-server.ps1  check-frontend-edition.mjs  check-no-forbidden-code.mjs  check-no-outbound-deps.mjs  checksums.ps1  local-ci.ps1  mcp-claude-real.ps1  mcp-fixture-smoke.ps1  measure-runtime.ps1  package-connector.ps1  package-local.ps1  publication-audit.mjs  sandbox-lifecycle-agent.ps1  sandbox-lifecycle.ps1  secret-scan.mjs
scripts/submission/: codex-gpt56-mcp-smoke.ps1  sandbox-candidate-lifecycle.ps1
(+37 files in other folders)
