[package]
name = "hangar-agent"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
agent_automation = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Cryptography", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Pipes"] }
